--- a/indeax.html
+++ b/indeax.html
@@ -1,5 +1,3 @@
--# cheak-Account
-user cheak account and find account
 <!DOCTYPE html>
 <html>
 <head>
@@ -95,3 +93,4 @@ user cheak account and find account
         }
     </script>
 </body>
+</html>
